# game-of-life

./: .appveyor.yml  .gitignore  .travis.yml  1.index.js  Cargo.toml  LICENSE  README.md  bootstrap.js  index.html  index.js  package-lock.json  package.json  styles.css  tsconfig.json  webpack.config.js
crate/src/: lib.rs
crate/src/quadtree/: mod.rs  quad.rs
crate/src/utils/: mod.rs  timer.rs
crate/tests/: web.rs
src/: lib.rs
static/: index.html  styles.css
www/: bootstrap.ts  index.ts  package-lock.json  package.json  webpack.config.js
www/public/: index.html
www/src/: fps.js  index.js  utils.js
