[package]
name = "game-of-life"
version = "0.1.0"
authors = ["jul1u5 <marozas.julius@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[features]
default-features = ["console_error_panic_hook", "wee_alloc"]

[profile.release]
lto = true

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
js-sys = "0.2.6"
bit-vec = "0.5.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.1", optional = true }
