[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Julius Marozas <marozas.julius@gmail.com>"]
edition = "2018"

description = "Conway's Game of Life implemented in WebAssembly"
repository = "https://github.com/jul1u5/game-of-life"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
path = "crate/src/lib.rs"

[features]
features = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.9"
wasm-bindgen = "0.2"
js-sys = "0.3.24"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

# [profile.release]
# opt-level = 'z'
# lto = true
